--- a/gui/app/build.gradle
+++ b/gui/app/build.gradle
@@ -30,9 +30,12 @@ dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:32.1.1-jre'
 
-    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.43.2.1'
+    // Logging
     implementation 'org.slf4j:slf4j-api:2.0.9'
     implementation 'org.slf4j:slf4j-simple:2.0.9'
+
+    // JSON serialization
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
